--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <div class="sub-title">USE CODE Autowin089 & GET ₹10 CASH</div>
 
   <!-- Red Download Button with Catbox Link -->
-  <a href="https://files.catbox.moe/bsv9px.apk" download="AutoWinEsports.apk" class="download-btn">Download App</a>
+  <a href="https://zenodo.org/records/16471044/files/AutoWin%20Esports.apk?download=1" download="AutoWinEsports.apk" class="download-btn">Download App</a>
 
   <!-- Image Below the Download Button -->
   <img src="https://iili.io/FevlgpV.png" alt="Extra Image" class="below-image" />
@@ -273,7 +273,7 @@
 
 <!-- DOWNLOAD BUTTON SECTION -->
 <div style="background-color: #ff0000; padding: 20px 0; text-align: center; width: 100vw; margin: 0; position: relative; left: 50%; right: 50%; transform: translateX(-50%);">
-  <a href="https://files.catbox.moe/bsv9px.apk" download="AutoWinEsports.apk" style="background-color: #000000; color: #ffffff; padding: 15px 30px; border-radius: 30px; font-size: 18px; text-decoration: none; display: inline-block;">Download Now</a>
+  <a href="https://zenodo.org/records/16471044/files/AutoWin%20Esports.apk?download=1" download="AutoWinEsports.apk" style="background-color: #000000; color: #ffffff; padding: 15px 30px; border-radius: 30px; font-size: 18px; text-decoration: none; display: inline-block;">Download Now</a>
 </div>
   
   <!-- White Space Between Sections -->
