--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
 <div class="hamburger-menu">
   <div class="hamburger-icon" onclick="toggleMenu()">☰</div>
   <div class="menu-links" id="menuLinks">
-    <a href="#privacy-policy">Privacy Policy</a>
-    <a href="#disclaimer">Disclaimer</a>
-    <a href="#terms">Terms and Conditions</a>
+    <a href="https://autowinesports.site/privacy">Privacy Policy</a>
+    <a href="https://autowinesports.site/disclaimer">Disclaimer</a>
+    <a href="https://autowinesports.site/terms">Terms and Conditions</a>
   </div>
 </div>
 
